[project]
name = "conversational-agent-poc"
version = "0.1.0"
description = "Conversational Agent POC integrating Cognee, Memobase, and Mem0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.3.0",
    "cognee-sdk>=0.3.0",
    "memobase>=0.0.40",
    "mem0ai>=1.0.1",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

